--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body {
   margin: 0 auto;
   width: 850px;
   max-width: 960px;
+  min-width: 200px;
   padding: 1em;
   overflow: auto; /* One way to make container actually contain all elements. */
   background: #fff;
@@ -33,7 +34,6 @@ body {
   float: left;
   display: inline-block;
   width: 200px;
-  max-width: 200px;
   position: relative;
   top: 15px;
 }
@@ -60,13 +60,12 @@ body {
 }
 
 #contact-info ul li {
-  margin: 5px;
+  margin: 1px;
 }
 
 #column_2 {
   float: right;
   width: 620px;
-  max-width: 620px;
   padding-left: 15px;
   border-left-style: solid;
   border-left-width: 1px;
@@ -74,7 +73,7 @@ body {
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 1.55em;
   text-align: right;
 }
 
