--- a/css/styles.css
+++ b/css/styles.css
@@ -50,12 +50,12 @@ h1, h2, h3 {
   top: 15px;
 }
 
-#addr_current, #addr_permanent {
+#addr_current{
   text-align: right;
   margin-top: 10px;
 }
 
-#addr_current p,  #addr_permanent p{
+#addr_current p{
   margin: 0px;
   padding: 0px;
   padding-top: 10px;
