--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ body {
 }
 
 #container {
-  position: relative;
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
   width: 55%;
@@ -18,10 +18,16 @@ body {
 
 nav {
   text-align: center;
-  border-radius: 1em;
-  border: 1px solid;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
   padding: 0em;
   background: #D5D6D6; /* #D5D6D6 = Darkest shade of gray from background */
+}
+
+#current-page {
+  background: #DCDDDD; /*#DCDDDD = Lightest shade of gray from background. */
 }
 
 ul {
@@ -47,11 +53,12 @@ ul li a {
   display: inline-block;
   padding-bottom: 0.5em;
   padding-top: 0.5em;
-  margin: 0px;
+  margin: 0em;
 }
 
 ul li a:hover {
   background: #DCDDDD; /*#DCDDDD = Lightest shade of gray from background. */
+  padding: 1em;
 }
 
 a p {
@@ -66,7 +73,7 @@ h1 {
   margin-bottom: 0em;
 }
 
-header h1 {
+main h1 {
   text-align: center;
   font-size: 3.5em;
 }
@@ -82,6 +89,11 @@ main {
   border: 1px solid;
   border-radius: 500px;
   margin-right: 1.05em;
+}
+
+#homepage {
+  display: block;
+  margin-top: 25%;
 }
 
 #name {
