--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,17 +1,15 @@
-@media (max-width: 320px) {
+@media (max-width: 360px) {
+
   body {
     background: url("../img/shattered.png");
-    font-family: Muli, sans-serif;
-    font-size: 16px;
+    font-family: sans-serif;
+    font-size: 24px;
   }
 
   #container {
+    margin: 0;
     margin-top: 5%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 55%;
-    min-width: 320px;
-    overflow: visible;
+    max-width: 360px;
   }
 
   nav {
