--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,16 +1,22 @@
-@media (max-width: 360px) {
+@media (max-width: 320px) {
 
   body {
     background: url("../img/shattered.png");
     font-family: sans-serif;
-    font-size: 24px;
+    font-size: 16px;
   }
 
   #container {
-    margin: 0;
-    margin-top: 5%;
-    width: 100%;
-    max-width: 360px;
+    display: block;
+    position: relative;
+    bottom: 5px;
+    margin-top: 0;
+    margin-bottom: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0em;
+    width: 90%;
+    max-width: 320px;
   }
 
   nav {
@@ -23,20 +29,17 @@
     background: #D5D6D6; /* #D5D6D6 = Darkest shade of gray from background */
   }
 
-
   ul {
     padding: 0;
   }
 
   ul li {
     list-style: none;
-    display: inline;
-    margin: 0 2em;
+    display: block;
   }
 
   #current-page {
-    background: #DCDDDD; /*#DCDDDD = Lightest shade of gray from background. */
-    padding: 0.5em;
+    background: none;
   }
 
   a:link, a:visited, a:hover, a:active {
@@ -48,21 +51,41 @@
     text-decoration: underline;
   }
 
-  ul li a {
-    display: inline-block;
-    padding-bottom: 0.5em;
-    padding-top: 0.5em;
-    margin: 0em;
-  }
-
   ul li a:hover {
-    background: #DCDDDD; /*#DCDDDD = Lightest shade of gray from background. */
+    background: none;
     padding: 0.5em;
   }
 
+  /**/
+  #menu-icon {
+    display:inline-block;
+    float: left;
+  }
+
+  nav ul, nav:active ul {
+    display: none;
+    position: absolute;
+    background: #fff;
+    border: 2px solid black;
+    width: 40%;
+    border-radius: 20px;
+  }
+
+  nav li {
+    text-align: center;
+    width: 100%;
+    padding: 0em;
+    margin: 0em;
+  }
+
+  nav:hover ul {
+    display: block;
+  }
+  /**/
+
   a p {
     line-height: 0;
-    margin-bottom: 4em;
+    margin-bottom: 2.5em;
   }
 
   h1 {
@@ -72,9 +95,13 @@
     margin-bottom: 0em;
   }
 
+  h2 {
+    font-size: 0.9em;
+  }
+
   main h1 {
-    text-align: center;
-    font-size: 3.5em;
+    text-align: left;
+    font-size: 2em;
   }
 
   main {
@@ -84,10 +111,9 @@
   }
 
   #headshot {
+    display: inline-block;
     float: left;
-    border: 1px solid;
-    border-radius: 100px;
-    margin-right: 1.05em;
+    width: 100px;
   }
 
   #homepage {
@@ -100,7 +126,7 @@
   .name {
     font-family: "Crimson Text", sans-serif;
     display: inline-block;
-    font-size: 6.5em;
+    font-size: 3em;
     font-style: italic;
     line-height: 0;
     margin-bottom: 0.25em;
@@ -108,7 +134,7 @@
   }
 
   .slogan {
-    font-size: 1.5em;
+    font-size: 0.9em;
     line-height: 0.75;
   }
 
@@ -120,11 +146,4 @@
     margin-right: 0.5em;
     margin-left: 0.5em;
   }
-
-  footer {
-    position: absolute;
-    bottom: 0;
-    font-size: 0.5em;
-  }
-
 }
