--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,12 +1,12 @@
 @media (max-width: 320px) {
 
-  body {
+  #webpage {
     background: url("../img/shattered.png");
     font-family: sans-serif;
     font-size: 16px;
   }
 
-  #container {
+  #webpage #container {
     display: block;
     position: relative;
     bottom: 5px;
@@ -15,11 +15,11 @@
     margin-left: auto;
     margin-right: auto;
     padding: 0em;
-    width: 90%;
+    width: 95%;
     max-width: 320px;
   }
 
-  nav {
+  #webpage nav {
     text-align: center;
     position: fixed;
     top: 0;
@@ -29,40 +29,40 @@
     background: #D5D6D6; /* #D5D6D6 = Darkest shade of gray from background */
   }
 
-  ul {
-    padding: 0;
+  #webpage ul {
+    padding: 0em;
   }
 
-  ul li {
+  #webpage ul li {
     list-style: none;
     display: block;
   }
 
-  #current-page {
+  #webpage #current-page {
     background: none;
   }
 
-  a:link, a:visited, a:hover, a:active {
+  #webpage a:link, #webpage a:visited, #webpage a:hover, #webpage a:active {
     text-decoration: none;
     color: black;
   }
 
-  main a:link {
+  #webpage main a:link {
     text-decoration: underline;
   }
 
-  ul li a:hover {
+  #webpage ul li a:hover {
     background: none;
     padding: 0.5em;
   }
 
-  /**/
-  #menu-icon {
+  /***********Small navigation box***********/
+  #webpage #menu-icon {
     display:inline-block;
     float: left;
   }
 
-  nav ul, nav:active ul {
+  #webpage nav ul, #webpage nav:active ul {
     display: none;
     position: absolute;
     background: #fff;
@@ -71,59 +71,59 @@
     border-radius: 20px;
   }
 
-  nav li {
+  #webpage nav li {
     text-align: center;
     width: 100%;
     padding: 0em;
     margin: 0em;
   }
 
-  nav:hover ul {
+  #webpage nav:hover ul {
     display: block;
   }
-  /**/
+  /************************/
 
-  a p {
+  #webpage a p {
     line-height: 0;
     margin-bottom: 2.5em;
   }
 
-  h1 {
+  #webpage h1 {
     font-family: "Crimson Text", sans-serif;
     font-style: italic;
     font-size: 2em;
     margin-bottom: 0em;
   }
 
-  h2 {
-    font-size: 0.9em;
+  #webpage h2 {
+    font-size: 1.1em;
   }
 
-  main h1 {
+  #webpage main h1 {
     text-align: left;
     font-size: 2em;
   }
 
-  main {
+  #webpage main {
     display: block;
     position: relative;
     top: 3em;
   }
 
-  #headshot {
+  #webpage #headshot {
     display: inline-block;
     float: left;
     width: 100px;
   }
 
-  #homepage {
+  #webpage #homepage {
     display: block;
     margin-top: 25%;
     width: 100%;
     text-align: center;
   }
 
-  .name {
+  #webpage .name {
     font-family: "Crimson Text", sans-serif;
     display: inline-block;
     font-size: 3em;
@@ -133,17 +133,113 @@
     margin-left: 0.25em;
   }
 
-  .slogan {
+  #webpage .slogan {
     font-size: 0.9em;
     line-height: 0.75;
   }
 
-  #icons {
+  #webpage #icons {
     text-align: center;
   }
 
-  .fa {
+  #webpage .fa {
     margin-right: 0.5em;
     margin-left: 0.5em;
   }
+
+  /****************Resume*******************/
+  #resume #resume-container {
+    width: 320px;
+    overflow: visible;
+    display: block;
+    padding: 1em;
+    background: white;
+    max-width: 320px;
+    min-width: 320px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid black;
+  }
+
+  #resume #top-section, #resume #column1, #resume #column2, #resume #contact-info {
+    display: block;
+    width: 100%;
+  }
+
+  #resume a:link, #resume a:visited, #resume a:hover, #resume a:active {
+    text-decoration: underline;
+    color: black;
+  }
+
+  #resume #top-section {
+    padding: 0em;
+    border-bottom: none;
+  }
+
+  #resume #top-section h1 {
+    font-family: "Crimson Text", sans-serif;
+    position: relative;
+    top: 1em;
+    font-style: italic;
+    font-size: 3em;
+    margin-bottom: 0em;
+    display: block;
+  }
+
+  #resume #top-section #contact-info {
+    display: inline-block;
+    position: relative;
+    top: 1.75em;
+    left: 2em;
+    float: none;
+    margin-top: 10px;
+  }
+
+  #resume #top-section #contact-info li {
+    display: none;
+  }
+
+  #resume #top-section #contact-info #icons {
+    width: 20em;
+  }
+
+  #resume #top-section #contact-info #icons a .fa {
+    display: inline-block;
+    margin-right: 1em;
+  }
+
+  #resume #column1, #resume #column2 {
+    position: relative;
+    bottom: 70px;
+  }
+
+  #resume #column1 {
+    float: none;
+    padding-left: 0em;
+  }
+
+  #resume #column1 ul {
+    padding-left: 0em;
+  }
+
+  #resume #column2 {
+    float: none;
+    width: 95%;
+    border: none;
+    padding: 0em;
+    padding-bottom: 2.6em;
+  }
+
+  #resume #column2 #experience {
+    position: static;
+  }
+
+  #resume .job {
+    font-weight: bold;
+  }
+
+  #resume .fa {
+    display: inline-block;
+  }
+  /*****************************************/
 }
