--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,7 @@
 @media (max-width: 320px) {
 
   #webpage {
-    background: url("../img/shattered.png");
+    background: url("../img/straws_@2X.png");
     font-family: sans-serif;
     font-size: 16px;
   }
@@ -26,7 +26,7 @@
     z-index: 1;
     width: 100%;
     padding: 0em;
-    background: #D5D6D6; /* #D5D6D6 = Darkest shade of gray from background */
+    background: url("../img/straws_@2X.png"); /* #D5D6D6 = Darkest shade of gray from background */
   }
 
   #webpage ul {
