--- a/css/index.css
+++ b/css/index.css
@@ -1,222 +1,161 @@
-@import url(http://fonts.googleapis.com/css?family=Muli|Crimson+Text:700italic);
-/*Crimson Text = Headers. Muli = Paragraphs */
+@import url(http://fonts.googleapis.com/css?family=Arvo|Ubuntu);
 
-body {
-  background: url("../img/straws_@2X.png");
-  font-family: Muli, sans-serif;
+body#homepage {
+  margin: 0;
+  padding: 0;
   font-size: 16px;
 }
 
-#webpage #container {
-  margin-top: 5%;
-  margin-left: auto;
-  margin-right: auto;
-  width: 55%;
-  overflow: visible;
+#homepage .container {
+  max-width: 960px;
+  min-width: 320px;
+  display: block;
+  margin: 1em auto;
+  position: relative;
 }
 
-#webpage nav {
-  text-align: center;
+#homepage #left-box {
   position: fixed;
-  top: 0;
-  z-index: 1;
-  width: 100%;
-  padding: 0em;
-  background: url("../img/straws_@2X.png"); /* #D5D6D6 = Darkest shade of gray from background */
+  width: 250px;
+  float: left;
+  background-color: white;
+  margin-right: 1em;
 }
 
-#webpage #menu-icon {
-	display: none;
-	width: 40px;
-	height: 40px;
-  background: #4C8FEC;
+#homepage #left-box #my-name {
+  font-size: 3em;
+  font-family: "Arvo", sans-serif;
+  margin-bottom: 0;
 }
 
-#webpage ul {
+#homepage #left-box #my-title {
+  margin-top: 0;
+  font-size: 1.25em;
+  font-family: "Ubuntu", sans-serif;
+}
+
+#homepage #programmer-button, #homepage #journalist-button {
+  cursor: pointer;
+  border-bottom: 1px solid black;
+  padding-bottom: 0.05em;
+}
+
+#homepage #left-box nav ul {
+  margin: 0;
   padding: 0;
 }
 
-#webpage ul li {
-  list-style: none;
-  display: inline;
-  margin: 0 2em;
-}
-
-#webpage #current-page {
-  background: white; /*#DCDDDD = Lightest shade of gray from background. */
-  padding: 0.5em;
-}
-
-#webpage a:link, #webpage a:visited, #webpage a:hover, #webpage a:active {
+#homepage a:link, #homepage a:visited, #homepage a:hover, #homepage a:active {
   text-decoration: none;
   color: black;
 }
 
-#webpage main a:link {
+#homepage a:hover {
   text-decoration: underline;
 }
 
-#webpage main #home-icons {
-  display: none;
-}
-
-#webpage ul li a {
-  display: inline-block;
-  /*padding-bottom: 0.5em;
-  padding-top: 0.5em;*/
-  padding: 0.5em;
-  margin: 0em;
-}
-
-#webpage ul li a:hover {
-  background: white; /*#DCDDDD = Lightest shade of gray from background. */
-  /*padding: 0.5em;*/
-}
-
-#webpage a p {
-  line-height: 0;
-  margin-bottom: 4em;
-}
-
-#webpage h1 {
-  font-family: "Crimson Text", sans-serif;
-  font-style: italic;
+#homepage #left-box nav ul li {
   font-size: 2em;
-  margin-bottom: 0em;
+  font-family: "Ubuntu", sans-serif;
+  line-height: 1.5;
+  margin: 0;
+  list-style-type: none;
 }
 
-#webpage main h1 {
-  text-align: center;
-  font-size: 3.5em;
-}
-
-#webpage main {
-  display: block;
+#homepage #right-box {
   position: relative;
-  top: 3em;
-}
-
-#webpage #headshot {
-  float: left;
-  border: 1px solid;
-  border-radius: 100px;
-  margin-right: 1.05em;
-}
-
-#webpage #homepage {
-  display: block;
-  margin-top: 25%;
-  width: 100%;
-  text-align: center;
-}
-
-#webpage .name {
-  font-family: "Crimson Text", sans-serif;
-  display: inline-block;
-  font-size: 6.5em;
-  font-style: italic;
-  line-height: 0;
-  margin-bottom: 0.25em;
-  margin-left: 0.25em;
-}
-
-#webpage .slogan {
-  font-size: 1.5em;
-  line-height: 0.75;
-}
-
-#webpage #icons {
-  text-align: center;
-}
-
-#webpage .fa {
-  margin-right: 0.5em;
-  margin-left: 0.5em;
-}
-
-/***********Resume***********/
-#resume #resume-container {
-  width: 960px;
+  float: right;
+  width: 576px;
+  height: auto;
+  padding: 1em;
+  background-color: white;
   overflow: auto;
-  display: block;
-  padding: 1.25em;
-  background: white;
-  max-width: 960px;
-  min-width: 320px;
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid black;
 }
 
-#resume a:link, #resume a:visited, #resume a:hover, #resume a:active {
-  text-decoration: underline;
-  color: black;
+#homepage #right-box #item-box {
+  width: 100%;
 }
 
-#resume #top-section {
-  padding: 0em;
+#homepage #right-box #written-work {
+  width: 100%;
+}
+
+#homepage #right-box h2 {
+  margin-top: 1.5em;
+  font-family: "Arvo", sans-serif;
+}
+
+#homepage #right-box #written-work p {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 1.15em;
+  line-height: 1.5;
+}
+
+#homepage .item {
   position: relative;
-  bottom: 75px;
-  border-bottom: 1px solid black;
-}
-
-#resume #top-section h1 {
-  font-family: "Crimson Text", sans-serif;
-  font-style: italic;
-  font-size: 16px;
-  font-size: 7.5em;
-  margin-bottom: 0em;
   display: inline-block;
+  top: 0;
+  left: 0;
+  width: 250px;
+  height: 250px;
+  margin: 1em 2em 3em 0em;
 }
 
-#resume #top-section #contact-info {
-  display: inline-block;
-  position: relative;
-  top: 77px;
-  right: 175px;
-  float: right;
-  width: 60px;
-  height: 60px;
-  margin-bottom: 1.05em;
+#homepage .item img {
+  position: absolute;
+  width: 100%;
+  height: 80%;
+  top: 4.75em;
 }
 
-#resume #top-section #contact-info li {
-  list-style: none;
+#homepage .item .item-desc {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  font-family: "Ubuntu", sans-serif;
 }
 
-#resume #column1, #resume #column2 {
-  position: relative;
-  bottom: 75px;
+#homepage .item .item-desc:nth-child(1) {
+  font-size: 1.25em;
+  font-family: "Arvo", sans-serif;
 }
 
-#resume #column1 {
-  float: left;
-  width: 215px;
-  padding-left: 0em;
+#homepage .item .item-desc:nth-child(2) {
+  margin-top: 1.75em;
 }
 
-#resume #column1 ul {
-  padding-left: 1.5em;
-}
+#homepage .clear { clear: both; }
 
-#resume #column2 {
-  float: right;
-  width: 650px;
-  border-left: 1px solid black;
-  padding: 1.25em;
-  padding-bottom: 2.6em;
-}
-
-#resume #column2 #experience {
-  position: relative;
-  bottom: 21px;
-}
-
-#resume .job {
+.itemTitle a {
+  text-decoration:none;
+  margin-top: 2em;
+  font-family: "Arvo", sans-serif;
+  font-size: 1.5em;
   font-weight: bold;
 }
 
-#resume .fa {
-  display: none;
+.itemDate {
+  font-family: "Ubuntu", sans-serif;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
-/************************/
+
+.feedEkList {
+   width: 100%;
+   list-style:none outside none;
+   background-color:#FFFFFF;
+   padding: 0;
+   color:#3E3E3E;
+}
+
+.feedEkList li {
+  margin-bottom: 3em;
+}
+
+.feedEkList .itemContent {
+  font-family: "Ubuntu", sans-serif;
+}
+
+ul {
+  list-style: none;
+}
