--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,14 @@ body#homepage {
   margin-top: 0;
   font-size: 1.25em;
   font-family: "Ubuntu", sans-serif;
+  line-height: 1.5;
+}
+
+#homepage #left-box #my-title a {
+  cursor: pointer;
+  border-bottom: 1px solid black;
+  padding-bottom: 0.05em;
+  text-decoration: none;
 }
 
 #homepage #programmer-button, #homepage #journalist-button {
