--- a/css/index.css
+++ b/css/index.css
@@ -109,8 +109,9 @@ body#homepage {
   display: inline-block;
   top: 0;
   left: 0;
-  width: 250px;
-  height: 250px;
+  width: 100%;
+  max-width: 480px;
+  height: 320px;
   margin: 1em 2em 3em 0em;
 }
 
